# goormjeju

./: main.py  pyproject.toml
.github/workflows/: ci.yaml
data/: gyul.csv
