[tool.poetry]
name = "cloud"
version = "0.1.0"
description = ""
authors = ["koreahouser <koreahouser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
